--- a/mod2_solution/index.css
+++ b/mod2_solution/index.css
@@ -6,7 +6,7 @@ p {
 	border: 1px solid black;
 	background-color: #C0C0C0;
 	width: 100%;
-	height: 300px;
+	height: auto;
 	margin-left: auto;
 	margin-block-start:0px;
 	font-family: Helvetica;
